--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://1drv.ms/b/c/4ae6a9dc6f6a5f8e/EY5fam_cqeYggErbDQAAAAABadG7GEfNCvTIjCpfTcf09A?e=T3Ewfx" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://1drv.ms/b/c/4ae6a9dc6f6a5f8e/EdVlJXzV7aJKvvq8MGBuGtcBqGood1geAEvs602rQxVDcw?e=72PyYZ" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -548,7 +548,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">+91 7795202662</a></p>
+	            <p><a href="tel://7795202662">+91 7795202662</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
