--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://1drv.ms/b/c/4ae6a9dc6f6a5f8e/EdVlJXzV7aJKvvq8MGBuGtcBqGood1geAEvs602rQxVDcw?e=72PyYZ" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://onedrive.live.com/?redeem=aHR0cHM6Ly8xZHJ2Lm1zL2IvYy80YWU2YTlkYzZmNmE1ZjhlL0VTcmlyVnlpSkdKRHV2NFlOdnVUemg0Qk4tUU9GTTZHQ0xYOC1zRG9iYjFjQ1E%5FZT1mM0wwQ1M&cid=4AE6A9DC6F6A5F8E&id=4AE6A9DC6F6A5F8E%21s5cade22a24a24362bafe1836fb93ce1e&parId=4AE6A9DC6F6A5F8E%211123&o=OneUp" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
